# pipe_leak_dashboard

./: .gitignore  Makefile  README.md  fix_empty_leaks.txt  fix_explanation.txt  fixes_summary.txt  leak_events.csv  ml_features.csv  pipe_leak_app.py  pipe_leak_model.joblib  pipe_leak_prediction.py  pipe_leak_simulation.py  pipe_network.csv  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChartCard.tsx  Header.tsx  KpiCard.tsx  LoadingOverlay.tsx  RerunBanner.tsx  Sidebar.tsx  TabBar.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AboutPage.tsx  AnalysisPage.tsx  MapPage.tsx  ModelPage.tsx  OverviewPage.tsx
scripts/: run_simulation.py  train_model.py
src/pipe_leak/: config.py
src/pipe_leak/api/: main.py  reports.py  state.py
src/pipe_leak/dashboard/: app.py  state.py  styles.py
src/pipe_leak/dashboard/components/: charts.py  filters.py  maps.py
src/pipe_leak/dashboard/pages/: analysis.py  map_view.py  model_perf.py  overview.py
src/pipe_leak/data/: schemas.py
src/pipe_leak/ml/: classifiers.py  evaluate.py  features.py  registry.py  splits.py
src/pipe_leak/simulation/: deterioration.py  events.py  network.py
src/pipe_leak/utils/: geo.py  io.py
tests/: conftest.py
tests/test_ml/: test_features.py  test_splits.py
tests/test_simulation/: test_deterioration.py  test_events.py
